--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,7 +50,7 @@ body {
 /* Styling for links */
 
 a:hover {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/squiggle.svg");
+  // background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/squiggle.svg");
   background-position: bottom;
   background-repeat: repeat-x;
   background-size: 20%;
